// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toEqualText element negative 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).[22mtoEqualText[2m([22m[32mexpected[39m[2m)[22m

Expected: [32m\\"not-existing\\"[39m
Received: [31m\\"zzzBarzzz\\"[39m"
`;

exports[`toEqualText page negative 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).[22mtoEqualText[2m([22m[32mexpected[39m[2m)[22m

Expected: [32m\\"not-existing\\"[39m
Received: [31m\\"zzzBarzzz\\"[39m"
`;

exports[`toEqualText selector negative 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).[22mtoEqualText[2m([22m[32mexpected[39m[2m)[22m

Expected: [32m\\"Bar\\"[39m
Received: [31m\\"zzzBarzzz\\"[39m"
`;

exports[`toEqualText selector timeout should throw an error after the timeout exceeds 1`] = `"Error: Timeout exceed for element '#foobar'"`;

exports[`toEqualText selector with 'not' usage negative 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).[22mnot[2m.[22mtoEqualText[2m([22m[32mexpected[39m[2m)[22m

Expected: not [32m\\"Bar\\"[39m"
`;
